Atualizei informações no index.html e a imagem da capa

--- a/Projetos-Pessoais/SolomonDesign/index.html
+++ b/Projetos-Pessoais/SolomonDesign/index.html
@@ -5,10 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	  <!-- Favicons -->
-	  <link href="assets/img/favicon.png" rel="icon">
-	  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-    
+	
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900" rel="stylesheet">
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
@@ -142,7 +139,7 @@
 			    					<input type="text" class="form-control" placeholder="Telefone">
 			    				</div>
 		    					<div class="form-group">
-			              <textarea name="" id="" cols="30" rows="2" class="form-control" placeholder="Message"></textarea>
+			              <textarea name="" id="" cols="30" rows="2" class="form-control" placeholder="Mensagem"></textarea>
 			            </div>
 			            <div class="form-group">
 			              <input type="enviar" value="Solicite um orçamento" class="btn btn-secondary py-3 px-4">
