--- a/Projetos-Pessoais/SolomonDesign/index.html
+++ b/Projetos-Pessoais/SolomonDesign/index.html
@@ -40,7 +40,7 @@
 	          <li class="nav-item"><a href="#" class="nav-link" data-nav-section="team"><span>Equipe</span></a></li>
 	          <li class="nav-item"><a href="#" class="nav-link" data-nav-section="testimony"><span>Os Fundadores</span></a></li>
 	          <li class="nav-item"><a href="#" class="nav-link" data-nav-section="blog"><span>Blog</span></a></li>
-	          <li class="nav-item"><a href="#" class="nav-link" data-nav-section="contact"><span>Conta</span></a></li>
+	          <li class="nav-item"><a href="#" class="nav-link" data-nav-section=""><span>Conta</span></a></li>
 	          <li class="nav-item cta"><a href="#" class="nav-link">Solicite um orçamento</a></li>
 
 	        </ul>
@@ -74,7 +74,7 @@
               <div class="icon"><span class="flaticon-layers"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Design Perfeito</h3>
-                <p>Um mundo particular se apresenta. É um momento de encontro; do que somos e de como nos expressamos.</p>
+                <p>Um mundo particular se apresenta. É um momento de encontro; do que somos e de como nos expressamos. Experiencie cada momento!</p>
                 <p><a href="#" class="btn btn-primary">Consulte Mais Informações</a></p>
               </div>
             </div>      
@@ -152,7 +152,7 @@
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<span class="subheading">Sobre Nós</span>
-		            <h2 class="mb-4">Começamos a operar no ano 2000</h2>
+		            <h2 class="mb-4">Uma Trajetória De Sucesso</h2>
 		            <p>A Solomon&Design e Arquitetura é uma empresa especializada na criação de espaços únicos de acordo com os gostos de cada cliente.</p>
 		            <p>Com larga experiência e equipes de profissionais especializados, vem atuando em São Paulo e em todo o território nacional executando serviços da mais alta qualidade, utilizando cada vez mais produtos ecologicamente sustentáveis e certificados.</p>
 		            <p>Estamos no mercado há mais de 20 anos, oferecendo soluções de acordo com cada projeto, cumprindo com excelência grandes desafios.</p>
@@ -323,7 +323,6 @@
 										<ul class="ftco-social text-center">
 			                <li class="ftco-animate"><a href="https://twitter.com/login?lang=pt"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.facebook.com/"><span class="icon-facebook"></span></a></li>
-			                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.instagram.com/"><span class="icon-instagram"></span></a></li>
 			              </ul>
 		              </div>
@@ -345,7 +344,6 @@
 										<ul class="ftco-social text-center">
 			                <li class="ftco-animate"><a href="https://twitter.com/login?lang=pt"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.facebook.com/"><span class="icon-facebook"></span></a></li>
-			                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.instagram.com/"><span class="icon-instagram"></span></a></li>
 			              </ul>
 		              </div>
@@ -367,7 +365,6 @@
 										<ul class="ftco-social text-center">
 			                <li class="ftco-animate"><a href="https://twitter.com/login?lang=pt"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.facebook.com/"><span class="icon-facebook"></span></a></li>
-			                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.instagram.com/"><span class="icon-instagram"></span></a></li>
 			              </ul>
 		              </div>
@@ -389,7 +386,6 @@
 										<ul class="ftco-social text-center">
 			                <li class="ftco-animate"><a href="https://twitter.com/login?lang=pt"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.facebook.com/"><span class="icon-facebook"></span></a></li>
-			                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.instagram.com/"><span class="icon-instagram"></span></a></li>
 			              </ul>
 		              </div>
@@ -412,7 +408,6 @@
 										<ul class="ftco-social text-center">
 			                <li class="ftco-animate"><a href="https://twitter.com/login?lang=pt"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.facebook.com/"><span class="icon-facebook"></span></a></li>
-			                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.instagram.com/"><span class="icon-instagram"></span></a></li>
 			              </ul>
 		              </div>
@@ -434,7 +429,6 @@
 										<ul class="ftco-social text-center">
 			                <li class="ftco-animate"><a href="https://twitter.com/login?lang=pt"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.facebook.com/"><span class="icon-facebook"></span></a></li>
-			                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.instagram.com/"><span class="icon-instagram"></span></a></li>
 			              </ul>
 		              </div>
@@ -456,7 +450,6 @@
 										<ul class="ftco-social text-center">
 			                <li class="ftco-animate"><a href="https://twitter.com/login?lang=pt"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.facebook.com/"><span class="icon-facebook"></span></a></li>
-			                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.instagram.com/"><span class="icon-instagram"></span></a></li>
 			              </ul>
 		              </div>
@@ -478,7 +471,6 @@
 										<ul class="ftco-social text-center">
 			                <li class="ftco-animate"><a href="https://twitter.com/login?lang=pt"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.facebook.com/"><span class="icon-facebook"></span></a></li>
-			                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
 			                <li class="ftco-animate"><a href="https://www.instagram.com/"><span class="icon-instagram"></span></a></li>
 			              </ul>
 		              </div>
@@ -533,7 +525,7 @@
         </div>
       </div>
     </section>
-
+	<!--Blog-->
     <section class="ftco-section bg-light" data-section="blog">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
@@ -559,7 +551,7 @@
               		</div>
               	</div>
                 <h3 class="heading"><a href="single.html">MAPEAMENTO DE PROCESSOS: 6 MOTIVOS PARA FAZER UM</a></h3>
-                <p>Você sabe qual a importância de se mapear os processos de sua empresa? Nós te apresentamos as principais razões para realizar um. Confira!</p>
+                <p>Você sabe qual a importância de se mapear os processos de sua empresa? Nós te apresentamos as principais...</p>
                 <div class="d-flex align-items-center mt-4 meta">
 	                <p class="mb-0"><a href="#" class="btn btn-secondary">Consulte Mais Informação<span class="ion-ios-arrow-round-forward"></span></a></p>
 	                <p class="ml-auto mb-0">
@@ -664,7 +656,7 @@
               		</div>
               	</div>
                 <h3 class="heading"><a href="single.html">POR QUE FAZER UM PROJETO DE PAISAGISMO?</a></h3>
-                <p>Pensando em aproveitar e integrar melhor os espaços do seu lote? Criar ambientes práticos, protegidos, aconchegantes e bonitos? Então você...</p>
+                <p>Pensando em aproveitar e integrar melhor os espaços do seu lote? Criar ambientes práticos, protegidos, aconchegantes e bonitos?</p>
                 <div class="d-flex align-items-center mt-4 meta">
 	                <p class="mb-0"><a href="#" class="btn btn-secondary">Consulte Mais Informação<span class="ion-ios-arrow-round-forward"></span></a></p>
 	                <p class="ml-auto mb-0">
@@ -735,7 +727,7 @@
             </form>
           
           </div>
-
+		  <!--Mapa-->
           <div class="col-md-6 d-flex">
 			<div class="container-fluid-center">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2946.904904975949!2d-71.1264268851667!3d42.38717224138275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e37715cda8d7b5%3A0xbeee09bebc10ab61!2s199%20Washington%20Ave%2C%20Cambridge%2C%20MA%2002140%2C%20EUA!5e0!3m2!1spt-BR!2sbr!4v1616464761369!5m2!1spt-BR!2sbr" width="450" height="800" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -745,7 +737,9 @@
         </div>
       </div>
     </section>
+	<!--Mapa-->
 
+	
     <section class="ftco-section contact-section">
       <div class="container">
         <div class="row d-flex contact-info">
@@ -789,7 +783,7 @@
       </div>
     </section>
 		
-
+	<!--Rodapé-->
     <footer class="ftco-footer ftco-section">
       <div class="container">
         <div class="row mb-5">
